--- a/gh-actions/common/build-debian/action.yml
+++ b/gh-actions/common/build-debian/action.yml
@@ -299,9 +299,24 @@ runs:
 
           echo "::group::Show binaries information"
           for i in "${{ env.BUILD_OUTPUT_DIR }}"/*.deb; do
-            echo "$(basename "$i")"
-            dpkg --info "$i"
-            dpkg --contents "$i"
+            {
+              pkg_name=$(basename "$i")
+              echo '## Package `'"${pkg_name}"'`'
+              echo
+              echo '```'
+              echo "❯ dpkg --info $pkg_name"
+              dpkg --info "$i" 2>&1
+              echo '```'
+              echo
+              echo "<details>"
+              echo "<summary>Package contents</summary>"
+              echo
+              echo '```'
+              echo "❯ dpkg --contents $pkg_name" 2>&1
+              dpkg --contents "$i"
+              echo '```'
+              echo "<details>"
+            } | tee -a "${GITHUB_STEP_SUMMARY}"
           done
           echo "::endgroup::"
 
