--- a/gh-actions/common/build-debian/action.yml
+++ b/gh-actions/common/build-debian/action.yml
@@ -16,7 +16,7 @@ inputs:
     description: A list of extra build dependencies required during source build.
     required: false
     # FIXME: this should default to '', but we don't want to break job depending on us for now
-    default: 'ca-certificates git'
+    default: 'ca-certificates'
   extra-source-build-script:
     description: |
       A script to run to prepare the source build machine.
@@ -140,9 +140,17 @@ runs:
 
           echo "::group::Install build dependencies"
           apt build-dep .
+
+          GITHUB_TOKEN="${{ inputs.token }}"
+
           if [ -n "${{ inputs.extra-source-build-deps }}" ]; then
             # Install extra packages for build-deps, to allow downloading vendored sources
             deps=(${{ inputs.extra-source-build-deps }})
+
+            if [ -n "${GITHUB_TOKEN}" ]; then
+              deps+=(git)
+            fi
+
             apt install ${deps[@]}
           fi
           echo "::endgroup::"
@@ -151,7 +159,6 @@ runs:
             git config --system --add safe.directory "${{ github.workspace }}"
           fi
 
-          GITHUB_TOKEN="${{ inputs.token }}"
           if [ -n "${GITHUB_TOKEN}" ]; then
             git config --system url."https://api:${GITHUB_TOKEN}@github.com/".insteadOf "https://github.com/"
           fi
