gh-actions/build-debian: Simplify the lintian parser install
No need to copy the script around, we can just reuse the one from this
repository, since it's now in the action path

--- a/gh-actions/common/build-debian/action.yml
+++ b/gh-actions/common/build-debian/action.yml
@@ -237,18 +237,6 @@ runs:
         path: ${{ env.SOURCE_OUTPUT_DIR }}/
         if-no-files-found: error
 
-    - name: Install lintian result parser
-      if: inputs.lintian != 'skip'
-      shell: bash
-      run: |
-        echo "::group::Install lintian result parser"
-        set -eu
-
-        cp "${GITHUB_ACTION_PATH}/lintian-to-md.sh" \
-          "${{ env.ACTION_BIN_PATH }}"/lintian-to-md
-        chmod +x "${{ env.ACTION_BIN_PATH }}"/lintian-to-md
-        echo "::endgroup::"
-
     - name: Run lintian on sources
       # We do this in a different step for various reasons:
       # 1. To still be able to upload the source for manual inspection without
@@ -266,7 +254,6 @@ runs:
         volumes: |
           ${{ env.GITHUB_ACTION_PATH }}:${{ env.GITHUB_ACTION_PATH }}
           ${{ env.SOURCE_OUTPUT_DIR }}:${{ env.SOURCE_OUTPUT_DIR }}
-          ${{ env.ACTION_BIN_PATH }}:${{ env.ACTION_BIN_PATH }}
         workdir: ${{ env.SOURCE_OUTPUT_DIR }}
         shell: bash
         run: |
@@ -291,7 +278,7 @@ runs:
             lintian --pedantic --fail-on error ${{ inputs.lintian }} -- \
               "${{ env.PKG_SOURCE_CHANGES }}" \
             | tee "${out_file}"
-          cat "${out_file}" | "${{ env.ACTION_BIN_PATH }}"/lintian-to-md \
+          cat "${out_file}" | "${{ env.GITHUB_ACTION_PATH }}"/lintian-to-md.sh \
             >> $GITHUB_STEP_SUMMARY
           echo "::endgroup::"
 
@@ -414,7 +401,6 @@ runs:
         volumes: |
           ${{ env.GITHUB_ACTION_PATH }}:${{ env.GITHUB_ACTION_PATH }}
           ${{ env.BUILD_OUTPUT_DIR }}:${{ env.BUILD_OUTPUT_DIR }}
-          ${{ env.ACTION_BIN_PATH }}:${{ env.ACTION_BIN_PATH }}
         workdir: ${{ env.BUILD_OUTPUT_DIR }}
         shell: bash
         run: |
@@ -439,6 +425,6 @@ runs:
             lintian --pedantic --fail-on error ${{ inputs.lintian }} -- \
               *_"${{ env.PKG_VERSION }}"_*.deb \
             | tee "${out_file}"
-          cat "${out_file}" | "${{ env.ACTION_BIN_PATH }}"/lintian-to-md \
+          cat "${out_file}" | "${{ env.GITHUB_ACTION_PATH }}"/lintian-to-md.sh \
             >> $GITHUB_STEP_SUMMARY
           echo "::endgroup::"
