gh-actions/build-debian: Check for build-deps value using gh syntax
In this way we can avoid issues in case the variable contains quotes

--- a/gh-actions/common/build-debian/action.yml
+++ b/gh-actions/common/build-debian/action.yml
@@ -192,7 +192,7 @@ runs:
 
           GITHUB_TOKEN="${{ inputs.token }}"
 
-          if [ -n "${{ inputs.extra-source-build-deps }}" ]; then
+          if [ -n "${{ inputs.extra-source-build-deps != '' && 'true' || '' }}" ]; then
             # Install extra packages for build-deps, to allow downloading vendored sources
             deps=(${{ inputs.extra-source-build-deps }})
 
