gh-actions/build-debian: Use eatmydata by default as dpkg override
eatmydata allows faster builds and it's something that is used also by
default by mk-sbuild these days, so enable it by default here too.

--- a/.github/workflows/test-build-deb.yaml
+++ b/.github/workflows/test-build-deb.yaml
@@ -59,6 +59,7 @@ jobs:
         uses: ./.source/gh-actions/common/build-debian
         with:
           docker-image: ${{ env.UBUNTU_IMAGE }}
+          eatmydata: false
 
 
   run_autopkgtest_from_src_and_binaries:
