gh-actions/build-debian: Use unique names for groups

--- a/gh-actions/common/build-debian/action.yml
+++ b/gh-actions/common/build-debian/action.yml
@@ -150,10 +150,13 @@ runs:
         workdir: ${{ env.SOURCE_DIR }}
         shell: bash
         run: |
-          echo "::group::Update builder instance and install dependencies"
+          echo "::group::Update source builder instance"
           set -eu
 
           "${{ env.GITHUB_ACTION_PATH }}"/prepare-container.sh
+          echo "::endgroup::"
+
+          echo "::group::Install source build dependencies"
           apt install devscripts lsb-release
           echo "::endgroup::"
 
@@ -188,7 +191,7 @@ runs:
         workdir: ${{ env.SOURCE_DIR }}
         shell: bash
         run: |
-          echo "::group::Update builder instance"
+          echo "::group::Update source builder instance"
           set -eu
 
           "${{ env.GITHUB_ACTION_PATH }}"/prepare-container.sh
@@ -263,7 +266,7 @@ runs:
         workdir: ${{ env.SOURCE_OUTPUT_DIR }}
         shell: bash
         run: |
-          echo "::group::Update tester instance"
+          echo "::group::Update lintian sources tester instance"
           set -eu
 
           "${{ env.GITHUB_ACTION_PATH }}"/prepare-container.sh
@@ -412,7 +415,7 @@ runs:
         workdir: ${{ env.BUILD_OUTPUT_DIR }}
         shell: bash
         run: |
-          echo "::group::Update builder instance"
+          echo "::group::Update lintian binary tester instance"
           set -eu
 
           ""${{ env.ACTION_BIN_PATH }}"/${{ env.GITHUB_ACTION_PATH }}"/prepare-container.sh
