test-build-deb: Test skipping linitian on source build
We're doing it in other jobs but we didn't test the skip case

--- a/.github/workflows/test-build-deb.yaml
+++ b/.github/workflows/test-build-deb.yaml
@@ -125,6 +125,7 @@ jobs:
           docker-image: ${{ env.UBUNTU_IMAGE }}
           sources-only: true
           source-dir: ./hello-src
+          lintian: skip
 
 
   build_source_deb:
