--- a/gh-actions/rust/code-sanity/action.yaml
+++ b/gh-actions/rust/code-sanity/action.yaml
@@ -27,6 +27,7 @@ runs:
       uses: actions-rs/cargo@v1
       with:
         command: fmt
+        args: --check
     - name: Check code format with clippy
       id: clippy-check
       uses: actions-rs/clippy-check@v1
