--- a/gh-actions/go/generate/action.yaml
+++ b/gh-actions/go/generate/action.yaml
@@ -16,6 +16,9 @@ inputs:
   fail-on-diff:
     description: Fail the job on any detected diff.
     default: "true"
+  token:
+    description: A token to authenticate GH API calls with. It will be passed to setup-protoc for example. Make sure to limit the permissions.
+    default: ""
 outputs:
   diff:
     description: Returns if there is a local diff.
@@ -46,6 +49,8 @@ runs:
     - name: Install latest protoc
       uses: arduino/setup-protoc@v3
       if: ${{ steps.proto-deps.outputs.needs-protoc == 'true' }}
+      with:
+        repo-token: ${{ inputs.token }}
     - name: Regenerate files with go generate
       id: go-generate-run
       working-directory: ${{ inputs.working-directory }}
