Retarget calls of internal actions to the main branch

--- a/gh-actions/go/code-sanity/action.yaml
+++ b/gh-actions/go/code-sanity/action.yaml
@@ -143,7 +143,7 @@ runs:
       if: ${{ always() && steps.go-version.outcome == 'success' }}
       id: go-generate-check
       # https://github.com/orgs/community/discussions/25246
-      uses: canonical/desktop-engineering/gh-actions/go/generate@setup-protoc-token
+      uses: canonical/desktop-engineering/gh-actions/go/generate@main
       with:
         tools-directory: ${{ inputs.tools-directory }}
         paths-to-ignore: ${{ inputs.generate-diff-paths-to-ignore }}
