--- a/gh-actions/go/generate/action.yaml
+++ b/gh-actions/go/generate/action.yaml
@@ -46,6 +46,11 @@ runs:
 
         echo "::endgroup::"
       shell: bash
+    - name: Check token permissions
+      if: ${{ inputs.token != '' }}
+      uses: canonical/desktop-engineering/gh-actions/common/gh-perms@main
+      with:
+        token: ${{ inputs.token }}
     - name: Install latest protoc
       uses: arduino/setup-protoc@v3
       if: ${{ steps.proto-deps.outputs.needs-protoc == 'true' }}
