--- a/gh-actions/common/gh-perms/action.yaml
+++ b/gh-actions/common/gh-perms/action.yaml
@@ -20,11 +20,11 @@ runs:
       if: ${{ inputs.fail-for-push != 'false' }}
       continue-on-error: true
       run: |
+        set -eu
         git config user.name github-actions[bot]
         git config user.email github-actions[bot]@users.noreply.github.com
         git commit --allow-empty -m "DropMe: Pushing this commit should not work"
-        git push origin HEAD:${{ github.ref_name }}
-        if [ $? -eq 0 ]; then
+        if [ `git push origin HEAD:${{ github.ref_name }}` eq 0 ]; then
           echo "::error::GITHUB_TOKEN has 'content:write' permission, but it should be 'none' or 'read'."
           echo "status=failed" >> $GITHUB_OUTPUT
         fi
@@ -35,13 +35,13 @@ runs:
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        gh pr comment -b "You should restrict the github token permissions of your jobs (to none if possible `permissions: {}`)" ${{ github.event.pull_request.number }}
-        if [ $? -eq 0 ]; then
+        set -eu
+        if [ `gh pr comment -b "You should restrict the github token permissions of your jobs (to none if possible `permissions: {}`)" ${{ github.event.pull_request.number }}`]; then
           echo "::error::GITHUB_TOKEN has 'pull-requests:write' permission, but it should be 'none' or 'read'."
           echo "status=failed" >> $GITHUB_OUTPUT
         fi
     - name: Fail
       if: steps.check_push.outputs.status == 'failed' || steps.check_pr.outputs.status == 'failed'
       run: |
-        echo "Consider setting your job's permissions to none (`permissions: {}`)"
+        echo "::warning::Consider setting your job's permissions to none (`permissions: {}`) or to the minimum scope needed."
         exit 1
