One more missing required shell

--- a/gh-actions/common/gh-perms/action.yaml
+++ b/gh-actions/common/gh-perms/action.yaml
@@ -45,5 +45,6 @@ runs:
     - name: Fail
       if: steps.check_push.outputs.status == 'failed' || steps.check_pr.outputs.status == 'failed'
       run: |
+      shell: bash
         echo "::warning::Consider setting your job's permissions to none (`permissions: {}`) or to the minimum scope needed."
         exit 1
