Uses the supplied token explicetly
actions/checkout persists credentials by default, so git push
would use the GITHUB_TOKEN. Users could instead unset
`persist-credentials: false` and break that assumption.

So let's be explicit and use the token passed as input via
x-access-token URL.

--- a/gh-actions/common/gh-perms/action.yaml
+++ b/gh-actions/common/gh-perms/action.yaml
@@ -20,11 +20,19 @@ runs:
       if: ${{ inputs.fail-for-push != 'false' }}
       continue-on-error: true
       shell: bash
+      env:
+        GH_TOKEN: ${{ inputs.token }}
+        REPO_PATH: ${{ github.repository }}
       run: |
         set -eu
         git config user.name github-actions[bot]
         git config user.email github-actions[bot]@users.noreply.github.com
         git commit --allow-empty -m "DropMe: Pushing this commit should not work"
+        # By default actions/checkout persists credentials so git would just work if the token used
+        # to checkout the repo would allow it. But since users can unset 'persist-credentials:false'
+        # this logic would fall appart. To prevent that let's use the token explicetely.
+        # Construct the new push URL using the REPO_PATH from the github context
+        git remote set-url origin "https://x-access-token:${GH_TOKEN}@github.com/${REPO_PATH}.git"
         if git push origin HEAD:${{ github.ref_name }}; then
           echo "::error::GITHUB_TOKEN has 'content:write' permission, but it should be 'none' or 'read'."
           echo "status=failed" >> $GITHUB_OUTPUT
