Skip the PR commenting step if not under a PR.

--- a/gh-actions/common/gh-perms/action.yaml
+++ b/gh-actions/common/gh-perms/action.yaml
@@ -54,7 +54,8 @@ runs:
       run: |
         rm -rf '.source-checkout-${{ github.run_id }}'
     - name: Comment on current pull request
-      if: ${{ inputs.fail-for-pr != 'false' }}
+      # Only applicable on pull requests.
+      if: ${{ inputs.fail-for-pr != 'false' && github.event_name == 'pull_request' }}
       id: check_pr
       continue-on-error: true
       shell: bash
