Avoid repetition of branch name gen
By reusing the NEW_BRANCH variable as an output.

--- a/gh-actions/common/gh-perms/action.yaml
+++ b/gh-actions/common/gh-perms/action.yaml
@@ -37,20 +37,21 @@ runs:
         set -eu
         git config user.name github-actions[bot]
         git config user.email github-actions[bot]@users.noreply.github.com
-        git checkout -b "check-push-${{ github.run_id }}"
+        git checkout -b "${NEW_BRANCH}"
         git commit --allow-empty -m "DropMe: Pushing this commit should not work"
         # Push just works because we checkout with `persist-credentials: true` (the default
         # behaviour).
         if git push --set-upstream origin "${NEW_BRANCH}"; then
           echo "::error::'token' has 'contents:write' permission, but it should be 'none' or 'read'."
           echo "status=failed" >> $GITHUB_OUTPUT
+          echo "branch-to-cleanup=$NEW_BRANCH" >> $GITHUB_OUTPUT
         fi
     - name: Clean up temporary branch
       working-directory: '.source-checkout-${{ github.run_id }}'
       shell: bash
       if: ${{ steps.check_push.outputs.status == 'failed' }}
       env:
-        NEW_BRANCH: ${{ format('check_push-deleteme-{0}', github.run_id) }}
+        NEW_BRANCH: ${{ steps.check_push.outputs.branch-to-cleanup }}
       run: |
         git push --delete "${NEW_BRANCH}"
     - name: Clean up temporary checkout
