Install latest protoc
The GitHub Action we were using to install protoc
(arduino/setup-protoc) hasn't been updated since more than a year, and
installs a very old protoc version (23.4 from July 2023).

Remove that unmaintained action and download the latest protoc version
directly via curl.

--- a/gh-actions/go/code-sanity/action.yaml
+++ b/gh-actions/go/code-sanity/action.yaml
@@ -17,7 +17,7 @@ inputs:
     description: Files and paths to ignore when checking if generated files changed. This is passed to git update-index.
     default: po/* docs/**/*.md README.md
   token:
-    description: A token to authenticate GH API calls with. It will be passed to setup-protoc for example. Make sure to limit the permissions, e.g. a zero-permissions token is acceptable.
+    description: A token to authenticate GH API calls with. It will be used to get the latest protoc release, for example. Make sure to limit the permissions, e.g. a zero-permissions token is acceptable.
     default: ""
 runs:
   using: "composite"
